cargo-features = ["edition"]

[package]
name = "vektor"
description = "Strongly typed explicit SIMD"
authors = ["Adam Niederer <adam.niederer@gmail.com>"]
license = "MPL-2.0"
version = "0.2.2"
keywords = ["simd"]
categories = ["no-std", "hardware-support", "api-bindings"]
repository = "https://github.com/AdamNiederer/vektor"
readme = "README.org"
edition = "2018"

[dependencies]
packed_simd = "0.3.9"
